[metadata]
name = axon-sdk
version = 0.0.1
description = Axon SDK: Spike Timing Interval Computation Kernel Simulation Environment
long_description = file: README.md
long_description_content_type = text/markdown
author = Dmitri Lyalikov, Francesco Sheiban, Iñigo Lara
author_email = dmitri@existential-ai.com
license = Apache-2.0
url = https://pypi.org/project/axon-sdk/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    matplotlib
python_requires = >=3.11

[options.extras_require]
test =
    pre-commit
    pytest-cov
    ruff
    optax
    mypy

[options.package_data]
* = *.json, *.txt

[options.packages.find]
where = .
include = axon_sdk*
